# medicure-rag-chatbot

./: .gitignore  README.md  app.py  pyproject.toml  setup.py  streamlitApp.py  template.py  vector_query.py  vector_store.py
experiment/: medical-llama2-chatbot.ipynb
research/: medical-llama2-chatbot.ipynb
src/: helper.py  prompt.py
