[tool.poetry]
name = "medicure-rag-chatbot"
version = "0.1.0"
description = "An AI chatbot implementing RAG technique with Meta-Llama2-7b Large Language Model, along with langchain and pinecone vector databases. "
authors = ["Adarsh Maurya <adarsh@onionreads.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
setuptools = "^70.2.0"
streamlit = "^1.36.0"
langchain-community = "^0.2.6"
huggingface-hub = "^0.23.4"
pinecone = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
